--------------------------------------------------------------------------------
 Fusion 1.212 - June 30th, 2004
--------------------------------------------------------------------------------
- 06-29-04: Fixed #1020 - Unknown cause of bug. Added exception handling. [AlexKreuz]
- 06-29-04: Fixed #800 - All weapon buffs now expire on weapon unequip. [AlexKreuz]
- 06-29-04: Fixed #822 - HColor, CColor, HStyle uncapped. [AlexKreuz]
- 06-29-04: Fixed #1003 - PSS skills were ignoring Map PVP type. [AlexKreuz]
- 06-29-04: Fixed #157 - Baphomet Card vs PVP will hit yourself. [AlexKreuz] 
- 06-29-04: Fixed Ghetto Harb DeathExp calculations. Now fixed % x multiplier. [AlexKreuz]
- 06-29-04: Fixed #804 - "Worn Out Scroll" now adds 1% Base EXP. [AlexKreuz]
- 06-29-04: Fixed #1016 - 90% overweight displayed both 90% and 50% icons. [AlexKreuz]
- 06-29-04: Fixed #891 - Logins were allowed with usernamexy (xy = any chars). [AlexKreuz]
- 06-29-04: Fixed #481 - Target disconnecting while wizard casting caused crash. [AlexKreuz]
- 06-29-04: (Hopefully) fixed limit on packets allowed by Fusion. [Colus]
- 06-28-04: Fixed Card effects such as 'Baphomet Splash'. Broke with #977. [AlexKreuz]
- 06-28-04: Added ALBGM command #changes. Displays recent Fusion updates. [AlexKreuz]
- 06-28-04: Added #1015 - Backup button. Forced backups. [AlexKreuz]
- 06-27-04: Fixed #1007 - Fly/Butterfly Wings are allowed to be used under attack. [AlexKreuz]
- 06-27-04: Fixed #1006 - User can walk all the way across the screen (30 tiles, not 15). [AlexKreuz]
- 06-27-04: Fixed Meteor Storm for Monsters.  [Darkhelmet]
- 06-26-04: Gungnir caused crash on bash fail. [AlexKreuz]
- 06-26-04: Zephyris thunder-storm now uses target coordinates, not player. [AlexKreuz]
- 06-26-04: Insane amount of int caused crash due to too much dmg in skills. [AlexKreuz]
- 06-26-04: Fixed #1001 - Weapons' auto-castings did not work in PVP. [AlexKreuz]